--- a/css/main.css
+++ b/css/main.css
@@ -26,3 +26,9 @@
     background-color: gray;
     color: whitesmoke;
 }
+.buttons div{
+    border: solid indigo;
+}
+.buttons{
+    display: flex;
+}
