--- a/css/main.css
+++ b/css/main.css
@@ -9,11 +9,14 @@
     box-shadow: 8px 8px silver
 }
 
+.container {
+    display: flex;
+}
+
 #letters_div {
     margin: 50px;
     flex-flow: wrap;
     display: flex;
-    max-width: 550px;
 }
 
 .letter_div {
@@ -27,7 +30,8 @@
     padding: 5px;
     box-shadow: 3px 3px #73AD21;
 }
-.letter_div:hover{
+
+.letter_div:hover {
     background-color: silver;
     cursor: pointer;
 }
@@ -40,12 +44,12 @@
 
 .buttons div {
     margin-left: 50px;
-
     border-radius: 10px;
     border: 2px solid #73AD21;
     padding: 5px;
     box-shadow: 3px 3px #73AD21;
 }
+
 .buttons div:hover {
     background-color: silver;
     cursor: pointer;
@@ -58,7 +62,7 @@
 #question_letters_div {
     margin: 50px;
     display: flex;
-    max-width: 400px;
+    justify-content: center;
 }
 
 .question_letter_div {
@@ -68,4 +72,9 @@
     width: 50px;
     text-align: center;
     text-decoration: underline;
+}
+
+.left {
+    width: 60%;
+    max-width: 550px;
 }
